--- a/user.html
+++ b/user.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>User Page</h1>
+    <p>Welcome to the user page!</p>
+    <p>Here you can find user-specific information and settings.</p>
+    <p>Feel free to explore and customize your experience.</p>
 </body>
 </html>
